# hackweek-13

./: .gitignore  README.md  index.html  index.template  package.json  yarn
01-hello-world/: Cargo.toml  README.md  index.html  index.js
01-hello-world/pkg/: hello_world.js  hello_world_bg.wasm
01-hello-world/src/: lib.rs
02-ferris-says/: Cargo.toml  README.md  index.html  index.js
02-ferris-says/pkg/: ferris_says.js  ferris_says_bg.wasm
02-ferris-says/src/: lib.rs
03-todo-list/: Cargo.toml  README.md  app.js  index.html  styles.css
03-todo-list/pkg/: todo_list.js  todo_list_bg.wasm
03-todo-list/src/: lib.rs
04-bcrypt/: Cargo.toml  README.md  app.js  index.html  styles.css  worker.js
04-bcrypt/pkg/: LICENSE  README.md  bcrypt.js  bcrypt_bg.wasm
04-bcrypt/src/: lib.rs
scripts/: build.sh
