[package]
name = "hello_world"
version = "0.1.0"
license = "beerware"
authors = ["Emanuel Kluge <emanuel.kluge@xing.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
