[package]
name = "bcrypt"
version = "0.1.0"
license = "beerware"
authors = ["Emanuel Kluge <emanuel.kluge@xing.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
bcrypter = { path = "../../../../github.com/MitchellBerry/BCrypter" }

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
